squash bugs

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -41,7 +41,7 @@ body {
 font-size: 15px;
 line-height: 1.5; 
 background: #042f35;
-font-family: Segoe UI Semilight, 'Open Sans Semibold', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 color: #fbfbfb;
 }
 
@@ -56,7 +56,7 @@ justify-content: center;
 }
 
 header {
-font-family: Segoe UI Semilight, 'Open Sans Light', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft Light', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 background: #042f35;
 margin-top: 11em;
 }
@@ -132,7 +132,7 @@ font-size: 23px;
 color: #ebebeb;
 padding-left: 68px;
 padding-top: 22px;
-font-family: Segoe UI Semilight, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 }
 a.button small {
 display: block;
@@ -210,7 +210,7 @@ padding: 20px;
 
 /* GENERAL ELEMENT TYPE STYLES */
 #main-content h1 {
-font-family: Segoe UI Semilight, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: 2.8em;
 letter-spacing: -1px;
 color: #fbfbfb;
@@ -222,7 +222,7 @@ padding-right: 0.3em;
 margin-left: -0.9em;
 }
 #main-content h2 {
-font-family: Segoe UI Semilight, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: 22px;
 font-weight: bold;
 margin-bottom: 8px;
@@ -235,7 +235,7 @@ padding-right: 0.3em;
 margin-left: -1.5em;
 }
 #main-content h3 {
-font-family: Segoe UI Semilight, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: 18px;
 font-weight: bold;
 margin-top: 24px;
@@ -249,7 +249,7 @@ padding-right: 0.3em;
 margin-left: -2em;
 }
 #main-content h4 {
-font-family: Segoe UI Semilight, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: 15px;
 font-weight: bold;
 color: #fbfbfb;
@@ -261,7 +261,7 @@ padding-right: 0.3em;
 margin-left: -2.8em;
 }
 #main-content h5 {
-font-family: Segoe UI Semilight, 'Open Sans Semibold', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: 14px;
 color: #fbfbfb;
 } 
@@ -272,7 +272,7 @@ padding-right: 0.3em;
 margin-left: -3.2em;
 }
 #main-content h6 {
-font-family: Segoe UI Semilight, 'Open Sans Semibold', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+font-family: Segoe UI Semilight, 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
 font-size: .8em;
 color: #fbfbfb;
 }
